--- a/src/App.scss
+++ b/src/App.scss
@@ -24,14 +24,26 @@ ul,li{
 }
 
 .container{
-    width: 1204px;
+    width: 1224px;
     padding: 0px 50px;
     margin: 0 auto;
+    @media only screen and (max-width: 1224px)  {
+        width: 100vw;
+    }
+    @media only screen and (max-width: 980px)  {
+        padding: 0px 10px;
+     }
 }
 
 .app-body{
     display: flex;
-    width: 100%;
+    @media only screen and (max-width: 980px)  {
+        width: 100%;
+     }
+     @media only screen and (max-width: 800px)  {
+        width: 100%;
+        display: block;
+     }
 }
 
 
