--- a/src/components/main/card/card.scss
+++ b/src/components/main/card/card.scss
@@ -1,9 +1,10 @@
 @use '../../../styles-for-export/styles-for-export' as *;
 
 .card{
-    width: 300px;
+    width: 30%;
     height: 400px;
     padding: 0px 0px 20px 0px;
+    margin: 10px 0px;
     @include shadow;
     font-size: none;
     background-size: cover;
@@ -14,6 +15,33 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    @media only screen and (max-width: 1224px)  {
+       width: 250px;
+       height: 350px;
+    }
+    @media only screen and (max-width: 1085px)  {
+        width: 300px;
+        height: 400px;
+     }
+
+    @media only screen and (max-width: 864px)  {
+        width: 250px;
+        height: 300px;
+     }
+     @media only screen and (max-width: 810px)  {
+        width: 250px;
+        height: 300px;
+     }
+
+     @media only screen and (max-width: 564px)  {
+        width: 230px;
+        height: 300px;
+     }
+
+     @media only screen and (max-width: 425px)  {
+        width: 300px;
+        height: 400px;
+     }
 }
 
 .card-row{
@@ -54,20 +82,28 @@
     }
   
 }
+
 .card-buttons {
     padding: 10px 0px;
     width: 100%;
     display: flex;
     justify-content: center;
-    button{
-        background-color: white;
-        width: 100px;
-        border-radius: 5px;
-        height: 30px;     
-        font-size: 16px;
-        margin: 0px 10px;
-        padding: 3px 5px;
-        @include shadow;
-       
-    }   
+        button{
+            background-color: white;
+            width: 100px;
+            border-radius: 5px;
+            height: 30px;     
+            font-size: 16px;
+            margin: 0px 10px;
+            padding: 3px 5px;
+            @include shadow;
+                a{
+                    color:black;
+                }
+        }   
+        .picked{
+            background-color: rgb(110, 253, 110);
+            color: white;
+        }
 }
+
