--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,16 +1,25 @@
 @use '../../styles-for-export/styles-for-export' as *;
 
-.aside-navi {
-    flex-grow: 2;
-}
-
 .aside-navi__title {
     @include flex-XY-center;
     @include shadow;
     height: 45px;
     color: $color_main;
+    @media only screen and (max-width: 800px)  {
+        font-size: 16px;
+        height: 35px;
+        box-shadow: none;
+    } 
 }
 
+.aside-navi__list{
+    @media only screen and (max-width: 800px)  {
+        font-size: 16px;
+        display: flex;
+        max-width: 1000px;
+        overflow-x: scroll;
+    } 
+}
 
 .aside-navi-list__item {
     width: 200px;
@@ -20,11 +29,28 @@
     justify-content: space-between;
     margin: 5px 0px;
     font-size: 20px;
-    &:hover{
-        box-shadow: 0px 6px 1px #bde0fa;
-        background-color: $color_main;
-        color: white;
+    @media only screen and (max-width: 980px)  {
+        font-size: 16px;
+        margin: 0px 1px;
+        height: 50px;
+    }  
+    @media only screen and (max-width: 650px)  {
+        font-size: 14px;
+        margin: 0px 1px;
+        height: 40px;
+        width: 300px;
     }
+
+    @media only screen and (min-width: 768px)  {
+        &:hover{
+            box-shadow: 0px 6px 1px #bde0fa;
+            background-color: $color_main;
+            color: white;
+            
+        }
+    }
+    
+    
 }
 
 .current{
@@ -34,7 +60,7 @@
 }
 
 .close:after{
-    content: '🗙';
+    content: '×';
     width: 20px;
     height: 20px;
     border:1px solid white;
