--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -5,11 +5,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
     min-height: 350px;
-    @media only screen and (max-width: 1224px)  {
-
-    }
 }
+
+
 
 // .show-more-btn{
 //     margin: 10px 0px;
@@ -38,14 +38,15 @@
 
 .not-found-msg{
     position: relative;
-    top: 50%;
-    left: 50%;
-    margin-top: -120px;
     display: block;
     width: 150px;
     height: 150px;
     background-image: url('../../../public/icons/notfound.png');
     background-size: cover;
+        @media only screen and (max-width: 425px)  {
+            width: 100px;
+            height: 100px;
+        }
 }
 
 
