--- a/src/components/popups/favorites.scss
+++ b/src/components/popups/favorites.scss
@@ -50,7 +50,6 @@
     @include shadow;
     @media only screen and (max-width: 760px)  {
         width: 30%;
-        // height: 120px;
     }
 }
 
@@ -63,7 +62,6 @@
     @include shadow;
     @media only screen and (max-width: 760px)  {
         width: 70%;
-        // height: 70px;
     }
 }
 
@@ -95,7 +93,6 @@
     color: $color_main;
     @media only screen and (max-width: 760px)  {
         font-size: 14px;
-        // height: 70px;
     }
 }
 
@@ -105,6 +102,9 @@
     margin: 10px 0px 10px 10px;
     border-radius: 5px;
     color: $color_main;
+    a{
+        color: $color_main;
+    }
     @media only screen and (max-width: 760px)  {
         height: 20px;
     }
@@ -112,7 +112,6 @@
     &:last-child{
         background-color: rgb(238, 78, 78);
         color: white;
-        
     }
 }
 
@@ -127,4 +126,10 @@
     left: 50%;
     background-image: url('../../../public/icons/empty.png');
     background-size: cover;
+    @media only screen and (max-width: 425px)  {
+        width: 80px;
+        height: 80px;
+        margin-left: -40px;
+        margin-top: -40px;
+    }
 }
