--- a/src/components/popups/success.scss
+++ b/src/components/popups/success.scss
@@ -7,7 +7,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
